--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,14 +1,29 @@
 <h2>Let's add new products!</h2>
 
-<form method='post' action='/products' >
-  <label>Name of your product</label><br>
-  <input name="product[name]" size="30" type="text">
+<% if @product.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= pluralize(@product.errors.count, "error") %> prohibited this product from being save:</h2>
+    <ul>
+      <% @product.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
 
-  <br />
-  <label>Price</label><br>
-  <input name="product[price]" type="number">
-
-  <br />
-  <input type="submit" value="Create Product">
-</form>
+<%= form_for(@product) do |f| %>
+  <div class="field">
+    <%= f.label :name %>
+    <%= f.text_field :name %>
+  </div>
+  
+  <div class="field">
+    <%= f.label :price %>
+    <%= f.text_field :price %>
+  </div>
+  
+  <div class="field">
+    <%= f.submit %>
+  </div>
+<% end %>
 
