--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,7 +4,8 @@
   <% @products.each do |product| %>
     <li>
       Product Name: "<%= product.name %>" costs $<%= product.price %>  |  
-	  Sold by <%= product.user.name if product.user.present? %>    
+	  Sold by <%= product.user.name if product.user.present? %>  
+	  <%= link_to "show", product %>  
     </li>
   <% end %>
 </ul>
